Added the necessary photos that were missing